<resources>
    <string name="app_name" translatable="false">Cards Keeper</string>
    <string name="title_activity_detail" translatable="false">Card Detail</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_add" translatable="false">Add Card</string>


    <string name="invitation_message">Hey, check out this cool App!</string>
    <string name="invitation_title">Invitation to download Cards Keeper!</string>
    <string name="sent_invitations_fmt">Sent %d invitations</string>
    <string name="invitation_cta">Install!</string>
    <string name="action_share_app">Share App!</string>
    <string name="action_edit" translatable="false">Edit</string>
    <string name="widget_title" translatable="false">Saved Cards</string>
    <string name="card_add_message">Success</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDLK6_SGhwyNS-3s4dZSN6ClLIQTy65EzQ</string>

    <string name="delete_dialogbox_title">Confirm Delete...</string>
    <string name="delete_dialogbox_message">Are you sure you want delete this card?</string>
    <string name="delete_dialogbox_yes">YES</string>
    <string name="delete_dialogbox_no">NO</string>
    <string name="savecard_missing_fields">Missing Fields</string>
    <string name="cd_save_card">Save card</string>
    <string name="form_name">Name:</string>
    <string name="form_number">Number:</string>
    <string name="cd_delete_card">Delete card</string>
    <string name="add_card_label">Add Card</string>
    <string name="edit_card_label">Edit Card</string>
    <string name="share_app_cancel_message">Share App Cancelled</string>
    <string name="no_cards_message">No Cards</string>
    <string name="card_saved_message">Saved</string>
    <string name="card_delete_message">Card Deleted</string>
    <string name="delete_button">Delete</string>
    <string name="save_button">Save</string>
    <string name="email">Email</string>
    <string name="wesbite">Wesbite</string>
    <string name="address">Address</string>
    <string name="photo">Photo</string>
    <string name="title_activity_maps">Map</string>
    <string name="please_select_a_photo">Please Select a Photo</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="email_img">Email</string>
    <string name="no_card_found">No card Found</string>
    <string name="select_a_photo">Select a Photo</string>

</resources>
