<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

        <LinearLayout
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/content_card_form" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:weightSum="10">

                <Button xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="5"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/cd_save_card"
                    android:onClick="saveCard"
                    android:text="@string/save_button" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/delete_button"

                    android:contentDescription="@string/cd_delete_card"
                    android:onClick="deleteCard"
                    android:text="@string/delete_button" />

            </LinearLayout>
        </LinearLayout>
</FrameLayout>