<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dynamitechetan.android.CardKeeper.DetailActivityFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="2">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:scaleType="centerCrop" />
    <TextView
        android:id="@+id/card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/phone"
            android:src="@drawable/ic_phone_black_24dp"/>
        <TextView
            android:id="@+id/card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:gravity="center_vertical"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/website"
            android:src="@drawable/ic_language_black_24dp"/>
        <TextView
            android:id="@+id/card_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"

            android:layout_marginStart="14dp"
            android:gravity="center_vertical"
            android:textSize="25sp"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/email_img"

        android:src="@drawable/ic_email_black_24dp"/>
    <TextView
        android:id="@+id/card_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"

        android:gravity="center_vertical"
        android:textSize="20sp"
        />
</LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/address"
        android:src="@drawable/ic_location_on_black_24dp"/>
    <TextView
        android:id="@+id/card_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"

        android:gravity="center_vertical"
        android:textSize="18sp"
        />
</LinearLayout>


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        map:cameraTilt="30"
        map:cameraZoom="13"
        map:uiZoomControls="true" />


</LinearLayout>
</android.support.v4.widget.NestedScrollView>


