<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"

                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="10"

                        android:paddingEnd="5dp"
                        android:paddingLeft="5sp"
                        android:paddingStart="5dp"
                        android:paddingTop="5dp"
                        android:textColor="#000"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/phone"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/phone"
                        android:src="@drawable/ic_phone_black_24dp" />

                    <ImageView
                        android:id="@+id/email"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/email_img"
                        android:src="@drawable/ic_email_black_24dp" />

                    <ImageView
                        android:id="@+id/website"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/website"

                        android:src="@drawable/ic_language_black_24dp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:textColor="#0D98FE"

                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5sp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
